--- a/web/src/component/NavigationBar/NavigationBar.css
+++ b/web/src/component/NavigationBar/NavigationBar.css
@@ -3,7 +3,7 @@
     height: 100%;
     background-color: #ffffff;
     color: black;
-    padding: 15px;
+    /* padding: 15px; */
     border-right: 1px solid #d9d9d9;
     overflow: hidden;
 }
@@ -13,4 +13,10 @@
     align-items: center;
     white-space: nowrap;
     overflow: hidden;
+}
+
+.UserInfo {
+    padding: 20px 0px;
+    margin: 0 15px;
+    border-bottom: 1px solid #d9d9d9;
 }
