--- a/web/src/component/Layout/Layout.css
+++ b/web/src/component/Layout/Layout.css
@@ -1,6 +1,7 @@
 .LayoutContainer {
     display: flex;
     height: 100vh;
+    background-color: #f5f5f5;
 }
 
 .sideBarContainer {
@@ -17,3 +18,31 @@
     flex: 1;
     padding: 20px;
 }
+
+.contentContainer {
+    flex: 1;
+    margin: 50px 200px;
+    overflow-y: auto;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    transition: box-shadow 0.3s ease;
+    background-color: white;
+}
+
+.LayoutContainer.closedNav .contentContainer {
+    margin-left: 0;
+    transition: margin-left 1s ease;
+}
+
+.contentContainer::-webkit-scrollbar {
+    width: 6px; /* 设置滚动条的宽度 */
+  }
+  
+  .contentContainer::-webkit-scrollbar-thumb {
+    background-color: #ccc; /* 设置滚动条手柄的背景颜色 */
+    border-radius: 6px; /* 设置滚动条手柄的圆角 */
+  }
+
+  .contentContainer::-webkit-scrollbar-track {
+    background-color: white; /* 设置滚动条轨道的背景颜色 */
+  }
