--- a/web/src/component/NavigationBar/NavigationBar.css
+++ b/web/src/component/NavigationBar/NavigationBar.css
@@ -6,6 +6,8 @@
     /* padding: 15px; */
     border-right: 1px solid #d9d9d9;
     overflow: hidden;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease;
 }
 
 .UserInfo p {
@@ -38,7 +40,7 @@
   
 .UserInfo:hover .UserInfoOptions {
     right: 0px;
-    top: 120%;
+    top: 100%;
     max-height: 1200px;
     display: block;
     z-index: 999;
@@ -52,6 +54,7 @@
     margin-bottom: 8px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    border-radius: 5px;
   
     &:hover {
       background-color: #f0f0f0;
