--- a/web/src/component/Layout/Layout.css
+++ b/web/src/component/Layout/Layout.css
@@ -5,33 +5,29 @@
 }
 
 .sideBarContainer {
-    width: 300px;
+    transform: translateX(0%);
+    /* transform-origin: top left; */
+    transition: transform 1s ease;
     height: 100%;
-    transition: width 1s ease;
 }
 
 .sideBarContainer.closeNav {
-    width: 0px;
+    transform: translateX(-100%);
 }
 
 .contentContainer {
-    flex: 1;
     padding: 20px;
-}
-
-.contentContainer {
     flex: 1;
-    margin: 50px 200px;
+    margin: 50px 300px;
     overflow-y: auto;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
-    transition: box-shadow 0.3s ease;
+    transition: margin 2s ease;
     background-color: white;
 }
 
 .LayoutContainer.closedNav .contentContainer {
-    margin-left: 0;
-    transition: margin-left 1s ease;
+    margin: 50px 0;
 }
 
 .contentContainer::-webkit-scrollbar {
