--- a/web/src/component/NavigationBar/NavigationBar.css
+++ b/web/src/component/NavigationBar/NavigationBar.css
@@ -1,5 +1,5 @@
 .navigationContainer {
-    width: 100%;
+    width: 300px;
     height: 100%;
     background-color: #ffffff;
     color: black;
@@ -8,6 +8,15 @@
     overflow: hidden;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s ease;
+    padding: 10px 10px;
+}
+
+.nameCard {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 5px;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
 }
 
 .UserInfo p {
