--- a/web/src/component/NoteSystemViewer/NoteSystemViewer.css
+++ b/web/src/component/NoteSystemViewer/NoteSystemViewer.css
@@ -2,15 +2,14 @@
   overflow: hidden;
 }
 
-/* @keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+.noteViewHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10px;
 }
 
-.fadeInAnimation {
-  animation: fadeIn 2s ease-in-out;
-} */
+.noteViewContainer .noteTitle *{
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
